@startuml
'https://plantuml.com/class-diagram
hide circle
class UserRepositoryBD <<interface>>

title Class Diagram / As User, I want to register an account



class User{
    -username
    -password
    -role
}

class Role {
    -role
}
class UserViewMapper{
    +toUserView(User user):UserView
}
class UserController{
    +register(final CreateUserRequest request)
    }
class UserService{
 +register(CreateUserRequest request):User
}

class UserRepository{
    +findIfUserExists(String userName): boolean
    +saveBD(User user) : User
}

interface UserRepositoryBD
{
    +findByUsername(String userName): optional<User>
    +save(S entity) : <S extends User>
}

class UserRepositoryExternal{
    +httpExistsUser(String userName): boolean
}


UserController ..> UserService: uses >
UserService ..> UserRepository: uses >
UserRepository ..> UserRepositoryBD: uses >
UserRepository ..> UserRepositoryExternal: uses >
UserRepositoryBD ..> User: < record
UserController ..>UserViewMapper: uses >
User ..> Role : has
@enduml
